# Task_Parallel_Darknet_GEMM

./: CMakeLists.txt  README.md
include/: darknet_gemm.h  xitao_compat.h
scripts/: run_demo.ps1  run_demo.sh
src/: darknet_gemm.cpp  main.cpp
